--- a/templates/default.html
+++ b/templates/default.html
@@ -4,19 +4,19 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>My Hakyll Blog - $title$</title>
+        <title>NTP</title>
         <link rel="stylesheet" href="/css/default.css" />
     </head>
     <body>
         <div id="header">
             <div id="logo">
-                <a href="/">My Hakyll Blog</a>
+                <a href="/">NTP</a>
             </div>
             <div id="navigation">
-                <a href="/">Home</a>
-                <a href="/about.html">About</a>
-                <a href="/contact.html">Contact</a>
-                <a href="/archive.html">Archive</a>
+                <a href="/">Početak</a>
+                <a href="/about.html">O predmetu</a>
+                <a href="/contact.html">Kontakt</a>
+                <a href="/archive.html">Arhiva</a>
             </div>
         </div>
 
