--- a/templates/post.html
+++ b/templates/post.html
@@ -1,7 +1,7 @@
 <div class="info">
-    Posted on $date$
+    Postavljeno $date$
     $if(author)$
-        by $author$
+        od strane $author$
     $endif$
 </div>
 
